[WEJBHTTP-142] Refactoring - Removing useleass code. It is not necessary to call UTF-8.name() method which may throw UnsupportedEncodingException.